feat :alien: Atualizando layout de cores do portfolio e criando minha apresentacao com HTML e CSS

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="navbar" id="navbar"> 
 
         <ul class="title">
-            <li><a href="#">myProject</a></li>
+            <li><a href="#">my<span>Project</span></a></li>
         </ul>
         
         <ul class="topicos">
@@ -28,14 +28,56 @@
             <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-envelope"></i></i></a></li>
         </ul>
     </header>
 
     <section class="sobre-mim">
-        <div class="sobre-mim-texto" style="color: black;"> 
-            <h1>OLÁ SOU O GUSTAVO GOETTEN <br> DESENVOLVEDOR FULL STACK - JAVA</h1>
+        <div class="interface">
+            <div class="flex">
+                <div class="texto-topo-site">
+                    <h1>Olá, eu sou o <span>Gustavo Goetten</span> <br> DESENVOLVEDOR FULL STACK - <span>JAVA <i class="fa-brands fa-java"></i></span> !!!</h1>
+                    <p>Olá, eu sou o Gustavo tenho 20 anos e este é o meu portfolio, 
+                    estudando programação em busca da minha primeira vaga na area como DEV!!!</p>
+
+                    <div class="btn-informacoes-pessoais">
+                        <a href="#"><button>Meu curriculo <span><i class="fa-solid fa-file"></i></span></button></a>
+                        <a href="#"><button>Meu WhatsApp <i class="fa-brands fa-whatsapp"></i></button></a>
+                        <a href="#"><button>Meu Github <i class="fa-brands fa-github"></i></button></a>
+                    </div>
+                </div> 
+
+                <div class="img-topo-site">
+                    <img src="img/hello-world.png" alt="">
+                </div>
+            </div>
         </div>
     </section>
+
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
+    <p>kkkkkkkkkkkkkkkkkkkkkkkkk</p>
 
     <script src="https://kit.fontawesome.com/673302f271.js" crossorigin="anonymous"></script>
     <script>
