feat: :alien: Criei o design da carta de apresentacao

--- a/index.html
+++ b/index.html
@@ -98,71 +98,70 @@
     </section>
 
     <!-- Carta de apresentacao -->
-    <section class="apresentacao">
-
+    <section>
         <div class="imagemdefundo">
-            <div class="carta-de-apresentacao">
-                <p><i class="fa-solid fa-laptop-code"></i> <span class="desenvolvedor">Desenvolvedor</span> Full Stack -
-                    Java <i class="fa-solid fa-laptop-code"></i></p>
-
-                <p class="txt-conhecimentos">Sou estudante de Desenvolvimento com conhecimento em:</p>
-
-                <ul class="icones-apresentacao">
-                    <a href="">
-                        <li style="--cor1: orangered">
-                            <span class="icon"><i class="fa-brands fa-html5" id="html"></i></span>
-                            <span class="txt">HTML5</span>
-                        </li>
-                    </a>
-                    <a href="">
-                        <li style="--cor1: rgb(59, 90, 228)">
-                            <span class="icon"><i class="fa-brands fa-css3-alt" id="css"></i></span>
-                            <span class="txt">CSS3</span>
-                        </li>
-                    </a>
-                    <a href="">
-                        <li style="--cor1: yellow">
-                            <span class="icon"><i class="fa-brands fa-js" id="js"></i></span>
-                            <span class="txt">JavaScript JS</span>
-                        </li>
-                    </a>
-                    <a href="">
-                        <li style="--cor1: rgb(59, 90, 228)">
-                            <span class="icon"><i class="fa-brands fa-java" id="java"></i></span>
-                            <span class="txt">Java</span>
-                        </li>
-                    </a>
-                    <a href="">
-                        <li style="--cor1: #c3002f">
-                            <span class="icon"><i class="fa-brands fa-angular" id="angular"></i></span>
-                            <span class="txt">Angular</span>
-                        </li>
-                    </a>
-                    <a href="">
-                        <li style="--cor1: blue">
-                            <span class="icon"><i class="fa-solid fa-database" id="sql"></i></span>
-                            <span class="txt">HTML5</span>
-                        </li>
-                    </a>
-                    <a href="">
-                        <li style="--cor1: purple">
-                            <span class="icon"><i class="fa-brands fa-bootstrap" id="bootstrap"></i></span>
-                            <span class="txt">Bootstrap</span>
-                        </li>
-                    </a>
-                </ul>
-
-                <p class="txt">Meu nome é Gustavo tenho 20 anos. Comecei meus estudos em agosto de 2023 na area de
-                    Desenvolvimento pela Proway de Blumenau.</p>
-
-                <p>Abaixo segue um link para o Download do meu <span>curriculo</span></p>
-
-                <button class="btn-curriculo">Currículo</button>
-            </div>
-
+            
         </div>
 
 
+        <div class="carta-de-apresentacao">
+            <p><i class="fa-solid fa-laptop-code"></i> <span class="desenvolvedor">Desenvolvedor</span> Full Stack -
+                Java <i class="fa-solid fa-laptop-code"></i></p>
+
+            <p class="txt-conhecimentos">Sou estudante de Desenvolvimento com conhecimento em:</p>
+
+            <ul class="icones-apresentacao">
+                <a href="">
+                    <li style="--cor1: orangered">
+                        <span class="icon"><i class="fa-brands fa-html5" id="html"></i></span>
+                        <span class="txt">HTML5</span>
+                    </li>
+                </a>
+                <a href="">
+                    <li style="--cor1: rgb(59, 90, 228)">
+                        <span class="icon"><i class="fa-brands fa-css3-alt" id="css"></i></span>
+                        <span class="txt">CSS3</span>
+                    </li>
+                </a>
+                <a href="">
+                    <li style="--cor1: yellow">
+                        <span class="icon"><i class="fa-brands fa-js" id="js"></i></span>
+                        <span class="txt">JavaScript JS</span>
+                    </li>
+                </a>
+                <a href="">
+                    <li style="--cor1: rgb(59, 90, 228)">
+                        <span class="icon"><i class="fa-brands fa-java" id="java"></i></span>
+                        <span class="txt">Java</span>
+                    </li>
+                </a>
+                <a href="">
+                    <li style="--cor1: #c3002f">
+                        <span class="icon"><i class="fa-brands fa-angular" id="angular"></i></span>
+                        <span class="txt">Angular</span>
+                    </li>
+                </a>
+                <a href="">
+                    <li style="--cor1: blue">
+                        <span class="icon"><i class="fa-solid fa-database" id="sql"></i></span>
+                        <span class="txt">HTML5</span>
+                    </li>
+                </a>
+                <a href="">
+                    <li style="--cor1: purple">
+                        <span class="icon"><i class="fa-brands fa-bootstrap" id="bootstrap"></i></span>
+                        <span class="txt">Bootstrap</span>
+                    </li>
+                </a>
+            </ul>
+
+            <p class="txt">Meu nome é Gustavo tenho 20 anos. Comecei meus estudos em agosto de 2023 na área de
+                Desenvolvimento pela Proway de Blumenau.</p>
+
+            <p>Abaixo segue um link para o Download do meu <span>currículo</span></p>
+
+            <button class="btn-curriculo">Currículo</button>
+        </div>
     </section>
 
 
