feat: :bug: Deu merda kkkkkk

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                         <a href="#"><button>Meu Github <i class="fa-brands fa-github"></i></button></a>
                     </div>
 
-                    <div class="minhas-linguagens">
-                        <ul class="sci-linguagens">
+                    <div class="carta-de-apresentacao">
+                        <ul class="icones-apresentacao">
                             <li><a href="#"><i class="fa-brands fa-html5" style="color: orangered;"></i></a><span><i
                                         class="fa-brands fa-html5"></i> HTML5</span></li>
                             <li><a href="#"><i class="fa-brands fa-css3-alt"
